--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -31,7 +31,7 @@
           <h1 class="entry-title"><a href="{{ site.url }}{{ page.url }}" rel="bookmark" title="{{ page.title }}">{{ page.title }}</a></h1>
         {% endif %}
         <!--hackingbits-->
-        <h2><span class="entry-date date published"><time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%B %d, %Y" }}</a></time></span> by <span class="author vcard"><span class="fn"> <a href="{{ site.url }}/about/" title="About {{ page.author }}">{{ page.author }}</a></span></span></h2>
+        <h2><span class="entry-date date published"><time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%B %d, %Y" }}</a></time></span> by <span class="author vcard"><span class="fn"> <a href="{{ site.url }}/authors/#{{ page.author }}" title="{{ page.author }} posts">{{ page.author }}</a></span></span></h2>
         {% if site.reading_time %}
         <p class="entry-reading-time">
           <i class="fa fa-clock-o"></i>
