--- a/_includes/read-more.html
+++ b/_includes/read-more.html
@@ -5,7 +5,7 @@
     </div><!-- /.read-more-header -->
     <div class="read-more-content">
       <h3><a href="{{ site.url }}{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></h3>
-      <p>{% if post.description %}{{ post.description }}{% else %}{{ post.excerpt }}&hellip;{% endif %} <a href="{{ site.url }}{{ post.url }}">Read more</a></p>
+      <p>{% if post.description %}{{ post.description }}{% else %}{{ post.excerpt | strip_html | strip_newlines }}&hellip;{% endif %} <a href="{{ site.url }}{{ post.url }}">Read more</a></p>
     </div><!-- /.read-more-content -->
   {% endfor %}
   <div class="read-more-list">
