--- a/_includes/social-share.html
+++ b/_includes/social-share.html
@@ -1,15 +1,15 @@
 <span class="social-share-twitter">
   <a href="https://twitter.com/intent/tweet?hashtags={{ page.tags | join: ',' | remove: ' ' }}&amp;text={{ page.title | escape | replace:' ','%20' }}&amp;url={{ site.url }}{{ page.url }}{% if author.twitter %}&amp;via={{ author.twitter }}{% endif %}" title="Share on Twitter" itemprop="Twitter"><i class="fa fa-twitter-square"></i> Tweet</a>
-</span>
-&nbsp; &nbsp;
+</span>&nbsp; &nbsp;
 <span class="social-share-googleplus">
   <a href="https://plus.google.com/share?url={{ site.url }}{{ page.url }}" title="Share on Google Plus" itemprop="GooglePlus"><i class="fa fa-google-plus-square"></i> +1</a>
-</span>
-&nbsp; &nbsp;
+</span>&nbsp; &nbsp;
 <span class="social-share-linkedin">
     <a href="http://www.linkedin.com/shareArticle?mini=true&url={{ site.url }}{{ page.url }}&title={{ page.title }}" title="Share on LinkedIn" itemprop="LinkedIn"><i class="fa fa-linkedin-square"></i> LinkedIn</a>
-</span>
-&nbsp; &nbsp;
+</span>&nbsp; &nbsp;
+<span class="social-share-reddit">
+  <a href="http://www.reddit.com/submit?url={ site.url }}{{ page.url }}" title="Reddit it" itemprop="Reddit"><i class="fa fa-reddit-square"></i> Reddit</a>
+</span>&nbsp; &nbsp;
 <span class="social-share-facebook">
   <a href="https://www.facebook.com/sharer/sharer.php?u={{ site.url }}{{ page.url }}" title="Share on Facebook" itemprop="Facebook"><i class="fa fa-facebook-square"></i> Like</a>
 </span>
