--- a/_includes/social-share.html
+++ b/_includes/social-share.html
@@ -8,7 +8,7 @@
     <a href="http://www.linkedin.com/shareArticle?mini=true&url={{ site.url }}{{ page.url }}&title={{ page.title }}" title="Share on LinkedIn" itemprop="LinkedIn"><i class="fa fa-linkedin-square"></i> LinkedIn</a>
 </span>&nbsp; &nbsp;
 <span class="social-share-reddit">
-  <a href="http://www.reddit.com/submit?url={ site.url }}{{ page.url }}" title="Reddit it" itemprop="Reddit"><i class="fa fa-reddit-square"></i> Reddit</a>
+  <a href="http://www.reddit.com/submit?url={{ site.url }}{{ page.url }}" title="Reddit it" itemprop="Reddit"><i class="fa fa-reddit-square"></i> Reddit</a>
 </span>&nbsp; &nbsp;
 <span class="social-share-facebook">
   <a href="https://www.facebook.com/sharer/sharer.php?u={{ site.url }}{{ page.url }}" title="Share on Facebook" itemprop="Facebook"><i class="fa fa-facebook-square"></i> Like</a>
