--- a/_sass/_archives.scss
+++ b/_sass/_archives.scss
@@ -66,7 +66,7 @@
   a {
     padding: 4px 6px;
     margin: 2px;
-    background-color: lighten($black, 90);
+    background-color: darken($black,5);
     @include rounded(4px);
     text-decoration: none;
     span {
