--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -199,8 +199,9 @@ li {
 		white-space: nowrap;
 		margin: 0 2px;
 		padding: 0 5px;
-		border: 1px solid lighten($black, 90);
-		background-color: lighten($black, 95);
+		//border: 1px solid $white;
+		color: $black;
+		background-color: $highlight-bg-color;
 		@include rounded(3px);
 	}
 }
