--- a/_sass/_syntax.scss
+++ b/_sass/_syntax.scss
@@ -2,14 +2,14 @@
    Syntax highlighting and formatting
    ========================================================================== */
 
-/* 
+/*
    Pygments.rb and Rouge
    ========================================================================== */
 
 .highlight {
-	background-color: #efefef;
+	background-color: $highlight-bg-color;
 	font-family: $code-font;
-	color: #333332;
+	color: $highlight-color;
 	margin-bottom: 1.5em;
 	@include rounded($border-radius);
 	pre {
@@ -18,75 +18,76 @@
 		padding: 1em;
 	}
 	.lineno { padding-right: 24px; color: lighten(#333332,50);}
-	.hll { background-color: #ffffcc }
-	.c { color: #999988; font-style: italic } /* Comment */
-	.err { color: #a61717; background-color: #e3d2d2 } /* Error */
-	.k { color: #000000; font-weight: bold } /* Keyword */
-	.o { color: #000000; font-weight: bold } /* Operator */
-	.cm { color: #999988; font-style: italic } /* Comment.Multiline */
+	.hll { background-color: #ffc }
+	.c { color: #8D9684; font-style: italic } /* Comment */
+	.err { color: #C1C2C3; background-color: #e3d2d2 } /* Error */
+	.k { color: #989DAA; font-weight: bold } /* Keyword */
+	.o { color: #989DAA; font-weight: bold } /* Operator */
+	.cm { color: #8D9684; font-style: italic } /* Comment.Multiline */
 	.cp { color: #999999; font-weight: bold; font-style: italic } /* Comment.Preproc */
-	.c1 { color: #999988; font-style: italic } /* Comment.Single */
-	.cs { color: #999999; font-weight: bold; font-style: italic } /* Comment.Special */
-	.gd { color: #000000; background-color: #ffdddd } /* Generic.Deleted */
-	.ge { color: #000000; font-style: italic } /* Generic.Emph */
-	.gr { color: #aa0000 } /* Generic.Error */
+	.c1 { color: #8D9684; font-style: italic } /* Comment.Single */
+	.cs { color: #8D9684; font-weight: bold; font-style: italic } /* Comment.Special */
+	.gd { color: #989DAA; background-color: #ffdddd } /* Generic.Deleted */
+	.ge { color: #989DAA; font-style: italic } /* Generic.Emph */
+	.gr { color: #eeeeec } /* Generic.Error */
 	.gh { color: #999999 } /* Generic.Heading */
-	.gi { color: #000000; background-color: #ddffdd } /* Generic.Inserted */
-	.go { color: #888888 } /* Generic.Output */
-	.gp { color: #555555 } /* Generic.Prompt */
+	.gi { color: #babdb6; background-color: #ddffdd } /* Generic.Inserted */
+	.go { color: $text-color } /* Generic.Output */
+	.gp { color: #55aa55 } /* Generic.Prompt */
 	.gs { font-weight: bold } /* Generic.Strong */
 	.gu { color: #aaaaaa } /* Generic.Subheading */
-	.gt { color: #aa0000 } /* Generic.Traceback */
-	.kc { color: #000000; font-weight: bold } /* Keyword.Constant */
-	.kd { color: #000000; font-weight: bold } /* Keyword.Declaration */
-	.kn { color: #000000; font-weight: bold } /* Keyword.Namespace */
-	.kp { color: #000000; font-weight: bold } /* Keyword.Pseudo */
-	.kr { color: #000000; font-weight: bold } /* Keyword.Reserved */
-	.kt { color: #445588; font-weight: bold } /* Keyword.Type */
-	.m { color: #009999 } /* Literal.Number */
-	.s { color: #d01040 } /* Literal.String */
-	.na { color: #008080 } /* Name.Attribute */
+	.gt { color: #eeeeec } /* Generic.Traceback */
+	.kc { color: #989DAA; font-weight: bold } /* Keyword.Constant */
+	.kd { color: #989DAA; font-weight: bold } /* Keyword.Declaration */
+	.kn { color: #989DAA; font-weight: bold } /* Keyword.Namespace */
+	.kp { color: #989DAA; font-weight: bold } /* Keyword.Pseudo */
+	.kr { color: #989DAA; font-weight: bold } /* Keyword.Reserved */
+	.kt { color: #e3e7df; font-weight: bold } /* Keyword.Type */
+	.m { color: #8ae234 } /* Literal.Number */
+	.s { color: #d0b510 } /* Literal.String */
+	.na { color: #fff } /* Name.Attribute */
 	.nb { color: #0086B3 } /* Name.Builtin */
-	.nc { color: #445588; font-weight: bold } /* Name.Class */
-	.no { color: #008080 } /* Name.Constant */
+	.nc { color: #e3e7df; font-weight: bold } /* Name.Class */
+	.no { color: #fff } /* Name.Constant */
 	.nd { color: #3c5d5d; font-weight: bold } /* Name.Decorator */
-	.ni { color: #800080 } /* Name.Entity */
-	.ne { color: #990000; font-weight: bold } /* Name.Exception */
-	.nf { color: #990000; font-weight: bold } /* Name.Function */
-	.nl { color: #990000; font-weight: bold } /* Name.Label */
+	.ni { color: #888a85 } /* Name.Entity */
+	.ne { color: #C1C2C3; font-weight: bold } /* Name.Exception */
+	.nf { color: #C1C2C3; font-weight: bold } /* Name.Function */
+	.nl { color: #C1C2C3; font-weight: bold } /* Name.Label */
 	.nn { color: #555555 } /* Name.Namespace */
-	.nt { color: #000080 } /* Name.Tag */
-	.nv { color: #008080 } /* Name.Variable */
-	.ow { color: #000000; font-weight: bold } /* Operator.Word */
+	.nt { color: #729fcf } /* Name.Tag */
+	.nv { color: #fff } /* Name.Variable */
+	.ow { color: #989DAA; font-weight: bold } /* Operator.Word */
 	.w { color: #bbbbbb } /* Text.Whitespace */
-	.mf { color: #009999 } /* Literal.Number.Float */
-	.mh { color: #009999 } /* Literal.Number.Hex */
-	.mi { color: #009999 } /* Literal.Number.Integer */
-	.mo { color: #009999 } /* Literal.Number.Oct */
-	.sb { color: #d01040 } /* Literal.String.Backtick */
-	.sc { color: #d01040 } /* Literal.String.Char */
-	.sd { color: #d01040 } /* Literal.String.Doc */
-	.s2 { color: #d01040 } /* Literal.String.Double */
-	.se { color: #d01040 } /* Literal.String.Escape */
-	.sh { color: #d01040 } /* Literal.String.Heredoc */
-	.si { color: #d01040 } /* Literal.String.Interpol */
-	.sx { color: #d01040 } /* Literal.String.Other */
+	.mf { color: #8ae234 } /* Literal.Number.Float */
+	.mh { color: #8ae234 } /* Literal.Number.Hex */
+	.mi { color: #8ae234 } /* Literal.Number.Integer */
+	.mo { color: #8ae234 } /* Literal.Number.Oct */
+	.sb { color: #d0b510 } /* Literal.String.Backtick */
+	.sc { color: #d0b510 } /* Literal.String.Char */
+	.sd { color: #d0b510 } /* Literal.String.Doc */
+	.s2 { color: #d0b510 } /* Literal.String.Double */
+	.se { color: #d0b510 } /* Literal.String.Escape */
+	.sh { color: #d0b510 } /* Literal.String.Heredoc */
+	.si { color: #d0b510 } /* Literal.String.Interpol */
+	.sx { color: #d0b510 } /* Literal.String.Other */
 	.sr { color: #009926 } /* Literal.String.Regex */
-	.s1 { color: #d01040 } /* Literal.String.Single */
+	.s1 { color: #d0b510 } /* Literal.String.Single */
 	.ss { color: #990073 } /* Literal.String.Symbol */
 	.bp { color: #999999 } /* Name.Builtin.Pseudo */
-	.vc { color: #008080 } /* Name.Variable.Class */
-	.vg { color: #008080 } /* Name.Variable.Global */
-	.vi { color: #008080 } /* Name.Variable.Instance */
-	.il { color: #009999 } /* Literal.Number.Integer.Long */
+	.vc { color: #fff } /* Name.Variable.Class */
+	.vg { color: #fff } /* Name.Variable.Global */
+	.vi { color: #fff } /* Name.Variable.Instance */
+	.il { color: #8ae234 } /* Literal.Number.Integer.Long */
 }
 
-/* 
+/*
    Coderay
    ========================================================================== */
 
 .CodeRay {
   background-color: #efefef;
+
   font-family: $code-font;
   @include font-size(12);
   color: #333332;
@@ -112,7 +113,7 @@ ol.CodeRay li { white-space: pre }
 
 .CodeRay {
 
-	.line-numbers, 
+	.line-numbers,
 	.no {
 	  background-color: #ececec;
 	  color: #aaa;
@@ -178,7 +179,7 @@ ol.CodeRay li { white-space: pre }
 	.preprocessor { color: #579; }
 	.pseudo-class { color: #00c; font-weight: bold }
 	.predefined-type { color: #074; font-weight: bold }
-	.reserved, 
+	.reserved,
 	.keyword { color: #000; font-weight: bold }
 
 	.key { color: #808; }
