--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -34,7 +34,7 @@
       <div>
 	<center>
 	  <i>
-	    This post was written in markup language. You can find it <a href="http://github.com/{{ site.owner.github }}/{{ site.owner.repo }}" target="_blank"><b>here</b></a>.
+	    This post was written in markup language. You can find it <a href="http://github.com/{{ site.owner.github }}/{{ site.owner.repo }}/tree/master/{{ page.path }}" target="_blank"><b>here</b></a>.
 	  </i>
 	</center>
 	<hr />
