--- a/_sass/_syntax.scss
+++ b/_sass/_syntax.scss
@@ -73,7 +73,7 @@
 	.sx { color: #d0b510 } /* Literal.String.Other */
 	.sr { color: #009926 } /* Literal.String.Regex */
 	.s1 { color: #d0b510 } /* Literal.String.Single */
-	.ss { color: #990073 } /* Literal.String.Symbol */
+	.ss { color: #5080FF } /* Literal.String.Symbol */
 	.bp { color: #999999 } /* Name.Builtin.Pseudo */
 	.vc { color: #fff } /* Name.Variable.Class */
 	.vg { color: #fff } /* Name.Variable.Global */
