--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -39,8 +39,8 @@
 /* tag listing in page header */
 
 .entry-tags {
-	display: block;
-	margin-top: 4em;
+	margin: 2em 0 0;
+	padding: 0;
 	text-transform: uppercase;
 	@include font-size(16);
 	font-weight: 600;
@@ -49,7 +49,23 @@
 		&:hover {
 			border-bottom-style: solid;
 		}
+		padding: 0 5px;
 	}
+	li {
+	  display: inline-block;
+	  margin-bottom: 0;
+	  &:before {
+	    content: "\2022";
+	  }
+	  &:first-child {
+	    &:before {
+	      content: "";
+	  }
+	  a {
+	    padding-left: 0;
+	  }
+	}
+      }
 }
 
 /* page title */
